--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/main.rs"
 name = "midi_monitor"
 path = "src/bin/midi_monitor.rs"
 
+[[bin]]
+name = "screenshot"
+path = "src/bin/screenshot.rs"
+
 [dependencies]
 # MIDI hardware I/O (ports, real-time messages)
 midir = "0.10"
@@ -26,3 +30,9 @@ tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 
 # Error handling
 anyhow = "1"
+
+# Image saving (for screenshots)
+image = "0.25"
+
+# Timestamps
+chrono = "0.4"
